# rimpy

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_engine.py
python/rimpy/: __init__.py  _engine.py  _engine_py.py  _loaders.py  _rake.py  _rimpy_engine.cp314-win_amd64.pyd
src/: arrow_adapter.rs  engine.rs  lib.rs
tests/: test_backend_parity.py  test_rake_functions.py
