[package]
name = "rimpy_engine"
version = "0.1.0"
edition = "2024"
description = "Fast RIM/raking engine for rimpy"

[lib]
name = "_rimpy_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
arrow = { version = "57", default-features = false, features = ["ffi"] }  # Arrow PyCapsule FFI
rayon = "1.10"               # Parallel iteration for grouped raking
indexmap = "2"               # Preserves insertion order like Python dict

[profile.release]
lto = "fat"                  # Fat LTO for cross-crate inlining
codegen-units = 1            # Single codegen unit = better optimization
opt-level = 3
strip = true
